[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/components/IconIntValue.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/ui/components/AnimatedIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/components/IconValue.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/game/GameUI.gd" type="Script" id=5]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="TopLeft" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TopLeft"]
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IconIntValue" parent="TopLeft/HBoxContainer" instance=ExtResource( 1 )]
margin_right = 51.0
margin_bottom = 27.0

[node name="AnimatedIcon" parent="TopLeft/HBoxContainer/IconIntValue/IconHolder" index="0" instance=ExtResource( 3 )]
position = Vector2( 12, 0 )
scale = Vector2( 2, 2 )
frame = 0

[node name="IconValue" parent="TopLeft/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 101.0
margin_right = 181.0
margin_bottom = 27.0
size_flags_horizontal = 1

[editable path="TopLeft/HBoxContainer/IconIntValue"]
